--- a/app/index.html
+++ b/app/index.html
@@ -3,96 +3,104 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>SmartInvestor</title>
-	<link href="css/normalize.css" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
+	<title>Title</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700" rel="stylesheet">
 	<link href="css/media.css" rel="stylesheet">
+	<link type="text/css" rel="stylesheet" href="css/icomoon.css" media="all">
+	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-	<header>
-		<div class="center clearfix">
-			<div class="header-top">
-				<span class="date">24 Jan 10</span>
-				<div class="header-nav">
-					<ul>
-						<li><a href="#" class="btn-dropdown">About Us</a></li>
-						<li><a href="#">Contact us</a></li>
-						<li><a href="#" class="btn-dropdown">Help</a></li>
-					</ul>
-				</div>
-				<div class="entrance">
-					<a href="#" class="name">Welcome John Addis</a>
-					<a href="#" class="logout">Logout</a>
-					<a href="#" class="join">Join NoW</a>
-				</div>
-			</div>
+<div class="main-container">
+	<header class="page-header">
+		<h1 class="visually-hidden">Lorem ipsum dolor sit amet, consectetur</h1>
+		<div class="page-header__logo">
+			<a href=""><img src="img/logo.png" alt=""></a>
 		</div>
-		<div class="center clearfix">
-			<a href="#" class="logo">
-				<img src="img/logo.png" alt="">
+		<div class="navigation">
+			<a class="menu-btn">
+				<i class="icon-menu2"></i>
 			</a>
-			<div class="search-block">
-				<form action="#" method="post">
-					<input type="text" placeholder="Axs Code, Company name or Keyword">
-					<input type="submit" value="GO">
-				</form>
-			</div>
-			<div class="menu">
+			<nav role="navigation" class="main-nav">
 				<ul>
-					<li><a href="#">All the Latest</a></li>
-					<li class="dropdown-li">
-						<a href="#">Recommendations</a>
-						<div class="dropdown">
-							<ul>
-								<li><a href="#">Recent Changes </a></li>
-								<li><a href="#">Buys (16)</a></li>
-								<li><a href="#">Sells (27)</a></li>
-								<li><a href="#">Holds (53)</a></li>
-								<li><a href="#">Recommendation terms</a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#">Companies</a></li>
-					<li><a href="#">Portfolios</a></li>
-					<li>
-						<a href="#">Investor’s College</a>
-						<div class="dropdown">
-							<ul>
-								<li><a href="#">Holds (53)</a></li>
-								<li><a href="#">Recent Changes </a></li>
-								<li><a href="#">Buys (16)</a></li>
-								<li><a href="#">Recommendation terms</a></li>
-								<li><a href="#">Sells (27)</a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#">Sign Up Today</a></li>
+					<li class="main-nav__items"><a href="#">Home</a></li>
+					<li class="main-nav__items"><a href="#">Store</a></li>
+					<li class="main-nav__items"><a href="#">Blog </a></li>
+					<li class="main-nav__items"><a href="#">About </a></li>
+					<li class="main-nav__items"><a href="#">Contact</a></li>
 				</ul>
+			</nav>
+			<form class="search-page" action="">
+				<input class="search-page__field" type="text" name="search-page">
+				<input class="search-page__submit" type="submit" name="submit" value=" " >
+			</form>
+			<ul class="social-link-set">
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-facebook"></i></a>
+				</li>
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-twitter"></i></a>
+				</li>
+				<li class="social-link-set__item">
+					<a href=""><i class="icon-google-plus"></i></a>
+				</li>
+			</ul>
+			<div class="user">
+				<a href=""><i class="icon-user"></i></a>
 			</div>
 		</div>
 	</header>
 
-<div class="content">
-	<div class="center">
-		<div class="mein-search">
-			<form action="#" method="post" >
-				<input type="submit" value="Special Alert">
-				<input type="text" placeholder="Praesent aliquam,  justo convallis luctus rutrum, erat nulla fermentum diam, at nonummy quam  ante ac quam">
-			</form>
-		</div>
-	</div>
+
+
+
+
+
 </div>
 
-	<footer>
 
-		
 
-	</footer>
+<!--[if lt IE 9]>
 
-	<script src="js/jquery-1.12.0.min.js"></script>
 
-	<script src="js/main.js"></script>
+
+<script src="js/html5shiv/es5-shim.min.js"></script>
+
+
+
+<script src="js/html5shiv/html5shiv.min.js"></script>
+
+
+
+<script src="js/html5shiv/html5shiv-printshiv.min.js"></script>
+
+
+
+<script src="js/respond/respond.min.js"></script>
+
+
+
+<![endif]-->
+
+
+
+
+
+
+
+
+
+
+
+<script src="js/jquery-1.12.0.min.js"></script>
+
+
+
+<script src="js/main.js"></script>
+
+
 
 </body>
+
+
 
 </html>
