added sceleton navigation section

--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 			</nav>
 			<form class="search-page" action="">
 				<input class="search-page__field" type="text" name="search-page">
-				<input class="search-page__submit" type="submit" name="submit" value=" " >
+				<input class="search-page__submit" type="submit" name="submit" value=" ">
 			</form>
 			<ul class="social-link-set">
 				<li class="social-link-set__item">
@@ -52,31 +52,176 @@
 
 
 
+<div class="communication">
+	<h2 class="visually-hidden">Lorem ipsum dolor sit amet</h2>
+	<div class="communication__navigation">
+		<ul class="communication-menu">
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-home"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-cart"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-pencil"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-users"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-trophy"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-info"></i></a>
+			</li>
+			<li class="communication-menu__item">
+				<a href=""><i class="icon-envelop"></i></a>
+			</li>
+		</ul>
+		<ul class="contact">
+			<li class="contact__items">
+				<span class="contact__icon">
+					<i class="icon-phone"></i>
+				</span>
+				<p>(912) 555-1234</p>
+				<p>(912) 555-5678</p>
+			</li>
+			<li class="contact__items">
+				<span class="contact__icon">
+					<i class="icon-location"></i>
+				</span>
+				<adress>
+					1600 Pennsylvania<br>
+					Ave NW, Washington<br>
+					DC 20500, USA
+				</adress>
+			</li>
+			<li class="contact__items">
+				<span class="contact__icon">
+					<i class="icon-envelop"></i>
+				</span>
+				<a href="malito:office@website.com">hello@website.com</a>
+				<a href="malito:office@website.com">office@website.com</a>
+			</li>
+		</ul>
+		<div class="sub-menu-container">
+			<dl class="sub-menu">
+				<dt class="sub-menu__title">Tech<span class="sub-menu__arrow"></span></dt>
+				<dd class="sub-menu__items"><a href="">	Software & Apps</a></dd>
+				<dd class="sub-menu__items"><a href="">Gadgets</a></dd>
+				<dd class="sub-menu__items"><a href="">Mobile1</a></dd>
+			</dl>
+			<dl class="sub-menu">
+				<dt class="sub-menu__title">Entertainment<span class="sub-menu__arrow"></span></dt>
+				<dd class="sub-menu__items"><a href="">Film</a></dd>
+				<dd class="sub-menu__items"><a href="">	Gaming</a></dd>
+				<dd class="sub-menu__items"><a href="">	Music</a></dd>
+				<dd class="sub-menu__items"><a href="">	Spor</a></dd>
+			</dl>
+			<dl class="sub-menu">
+				<dt class="sub-menu__title">Business<span class="sub-menu__arrow"></span></dt>
+				<dd class="sub-menu__items"><a href="">Jobs</a></dd>
+				<dd class="sub-menu__items"><a href="">Marketing</a></dd>
+				<dd class="sub-menu__items"><a href="">Medias</a></dd>
+			</dl>
+			<dl class="sub-menu">
+				<dt class="sub-menu__title">Lifestyle<span class="sub-menu__arrow"></span></dt>
+				<dd class="sub-menu__items"><a href="">Home</a></dd>
+				<dd class="sub-menu__items"><a href="">Health & Fitmess</a></dd>
+				<dd class="sub-menu__items"><a href="">Travel & Leisure</a></dd>
+			</dl>
+		</div>
 
+	</div>
+	<div class="social">
+		<menu class="social-menu">
+			<li class="social-menu__item">
+				<a href="">
+					<span class="social-menu__icon-block"><i class="icon-facebook"></i></span>
+					<span class="social-menu__text-title">Facebook</span>
+				</a>
+			</li>
+			<li class="social-menu__item">
+				<a href="">
+					<span class="social-menu__icon-block"><i class="icon-twitter"></i></span>
+					<span class="social-menu__text-title">Twitter</span>
+				</a>
+			</li>
+			<li class="social-menu__item">
+				<a href="">
+					<span class="social-menu__icon-block"><i class="icon-google-plus"></i></span>
+					<span class="social-menu__text-title">Google +</span>
+				</a>
+			</li>
+			<li class="social-menu__item">
+				<a href="">
+					<span class="social-menu__icon-block"><i class="icon-rss"></i></span>
+					<span class="social-menu__text-title">Rss Feeds</span>
+				</a>
+			</li>
+			<li class="social-menu__item">
+				<a href="">
+					<span class="social-menu__icon-block"><i class="icon-pinterest2"></i></span>
+					<span class="social-menu__text-title">Pinterast</span>
+				</a>
+			</li>
+		</menu>
+		<div class="social-widget-container">
+			<article class="social-widget">
+				<img src="../img/facebook.jpg" alt="facebook_widget">
+			</article>
+			<article class="social-widget">
+				<img src="../img/twiter.jpg" alt="twitter_widget">
+			</article>
+		</div>
+		<div class="sign-in">
+			<h2 class="sign-in__title">Sign In</h2>
+			<span class="sign-in_descr">Just select your favorite social network to get started</span>
+			<menu class="sign-in__list">
+				<li class="sign-in__items">
+					<a href=""><i class="icon-facebook"></i></a>
+				</li>
+				<li class="sign-in__items">
+					<a href=""><i class="icon-twitter"></i></a>
+				</li>
+				<li class="sign-in__items">
+					<a href=""><i class="icon-google-plus"></i></a>
+				</li>
+				<li class="sign-in__items">
+					<a href=""><i class="icon-linkedin"></i></a>
+				</li>
+			</menu>
+		</div>
+		<div class="subscription">
+			<h2 class="subscription__title">Join the Newsletter</h2>
+			<span class="subscription__descr">Sign up for our personalized daily newsletter</span>
+			<form  class="subscription-form" action="">
+				<input class="subscription-form__email" type="email" placeholder="Enter email address">
+				<input class="subscription-form__submit" type="submit" value="SIGN UP">
+			</form>
+		</div>
+
+
+	</div>
+</div>
 
 
 </div>
 
 
-
 <!--[if lt IE 9]>
-
 
 
 <script src="js/html5shiv/es5-shim.min.js"></script>
 
 
-
 <script src="js/html5shiv/html5shiv.min.js"></script>
-
 
 
 <script src="js/html5shiv/html5shiv-printshiv.min.js"></script>
 
 
-
 <script src="js/respond/respond.min.js"></script>
-
 
 
 <![endif]-->
@@ -88,19 +233,13 @@
 
 
 
-
-
-
 <script src="js/jquery-1.12.0.min.js"></script>
-
 
 
 <script src="js/main.js"></script>
 
 
-
 </body>
-
 
 
 </html>
