created a page form

--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,11 @@
 			<a class="menu-btn">
 				<i class="icon-menu2"></i>
 			</a>
+			<div class="button-container" id="toggle">
+				<span class="top"></span>
+				<span class="middle"></span>
+				<span class="bottom"></span>
+			</div>
 			<nav role="navigation" class="main-nav">
 				<ul>
 					<li class="main-nav__items"><a href="index.html">Home</a></li>
@@ -169,10 +174,10 @@
 		</ul>
 		<div class="social-widget-container clearfix">
 			<article class="social-widget">
-				<img src="../img/faceebook.jpg" alt="facebook_widget">
+				<img src="img/faceebook.jpg" alt="facebook_widget">
 			</article>
 			<article class="social-widget">
-				<img src="../img/twitter.jpg" alt="twitter_widget">
+				<img src="img/twitter.jpg" alt="twitter_widget">
 			</article>
 		</div>
 		<div class="sign-in clearfix">
