--- a/html/index.html
+++ b/html/index.html
@@ -116,10 +116,10 @@
 		</ul>
 		<div class="social-widget-container clearfix">
 			<article class="social-widget">
-				<img src="../img/faceebook.jpg" alt="facebook_widget">
+				<img src="img/faceebook.jpg" alt="facebook_widget">
 			</article>
 			<article class="social-widget">
-				<img src="../img/twitter.jpg" alt="twitter_widget">
+				<img src="img/twitter.jpg" alt="twitter_widget">
 			</article>
 		</div>
 		<div class="sign-in clearfix">
