--- a/app/form.html
+++ b/app/form.html
@@ -20,6 +20,11 @@
 			<a class="menu-btn">
 				<i class="icon-menu2"></i>
 			</a>
+			<div class="button-container" id="toggle">
+				<span class="top"></span>
+				<span class="middle"></span>
+				<span class="bottom"></span>
+			</div>
 			<nav role="navigation" class="main-nav">
 				<ul>
 					<li class="main-nav__items"><a href="index.html">Home</a></li>
