--- a/app/index.html
+++ b/app/index.html
@@ -21,9 +21,9 @@
 				<i class="icon-menu2"></i>
 			</a>
 			<div class="button-container" id="toggle">
-				<span class="top"></span>
-				<span class="middle"></span>
-				<span class="bottom"></span>
+				<span class="button-container__top"></span>
+				<span class="button-container__topmiddle"></span>
+				<span class="button-container__bottom"></span>
 			</div>
 			<nav role="navigation" class="main-nav">
 				<ul>
@@ -57,8 +57,7 @@
 
 
 
-<div class="communication clearfix">
-	<h2 class="visually-hidden">Lorem ipsum dolor sit amet</h2>
+<div class="communication">
 	<div class="communication__navigation">
 		<div class="column-block">
 			<ul class="communication-menu">
@@ -172,7 +171,7 @@
 				</a>
 			</li>
 		</ul>
-		<div class="social-widget-container clearfix">
+		<div class="social-widget-container">
 			<article class="social-widget">
 				<img src="img/faceebook.jpg" alt="facebook_widget">
 			</article>
@@ -180,7 +179,7 @@
 				<img src="img/twitter.jpg" alt="twitter_widget">
 			</article>
 		</div>
-		<div class="sign-in clearfix">
+		<div class="sign-in">
 			<h2 class="sign-in__title">Sign In</h2>
 			<span class="sign-in_descr">Just select your favorite social network to get started</span>
 			<ul class="sign-in__list">
