--- a/html/form.html
+++ b/html/form.html
@@ -48,7 +48,7 @@
 			</dd>
 			<dd class="more-about__items comments">
 				<span class="comment_title">Your comments </span>
-				<textarea class="comments__textarea" name="textarea" rows="10" cols="40"></textarea>
+				<textarea class="comments__textarea" name="textarea"></textarea>
 			</dd>
 			<dd class="more-about__items selection-block">
 				<span class="selection-block__title">Selection</span>
