--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,5 @@
 #=include 'includes/_header.html'
-<div class="communication clearfix">
-	<h2 class="visually-hidden">Lorem ipsum dolor sit amet</h2>
+<div class="communication">
 	<div class="communication__navigation">
 		<div class="column-block">
 			<ul class="communication-menu">
@@ -114,7 +113,7 @@
 				</a>
 			</li>
 		</ul>
-		<div class="social-widget-container clearfix">
+		<div class="social-widget-container">
 			<article class="social-widget">
 				<img src="img/faceebook.jpg" alt="facebook_widget">
 			</article>
@@ -122,7 +121,7 @@
 				<img src="img/twitter.jpg" alt="twitter_widget">
 			</article>
 		</div>
-		<div class="sign-in clearfix">
+		<div class="sign-in">
 			<h2 class="sign-in__title">Sign In</h2>
 			<span class="sign-in_descr">Just select your favorite social network to get started</span>
 			<ul class="sign-in__list">
