--- a/app/form.html
+++ b/app/form.html
@@ -21,9 +21,9 @@
 				<i class="icon-menu2"></i>
 			</a>
 			<div class="button-container" id="toggle">
-				<span class="top"></span>
-				<span class="middle"></span>
-				<span class="bottom"></span>
+				<span class="button-container__top"></span>
+				<span class="button-container__topmiddle"></span>
+				<span class="button-container__bottom"></span>
 			</div>
 			<nav role="navigation" class="main-nav">
 				<ul>
@@ -106,7 +106,7 @@
 			</dd>
 			<dd class="more-about__items comments">
 				<span class="comment_title">Your comments </span>
-				<textarea class="comments__textarea" name="textarea" rows="10" cols="40"></textarea>
+				<textarea class="comments__textarea" name="textarea"></textarea>
 			</dd>
 			<dd class="more-about__items selection-block">
 				<span class="selection-block__title">Selection</span>
