--- a/app/form.html
+++ b/app/form.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Title</title>
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,300i,400,500,700" rel="stylesheet">
-	<link href="css/media.css" rel="stylesheet">
 	<link type="text/css" rel="stylesheet" href="css/icomoon.css" media="all">
 	<link href="css/style.css" rel="stylesheet">
 </head>
@@ -14,7 +13,7 @@
 	<header class="page-header">
 		<h1 class="visually-hidden">Lorem ipsum dolor sit amet, consectetur</h1>
 		<div class="page-header__logo">
-			<a href=""><img src="img/logo.png" alt=""></a>
+			<a href="index.html"><img src="img/logo.png" alt="main_logo"></a>
 		</div>
 		<div class="navigation">
 			<a class="menu-btn">
@@ -39,15 +38,9 @@
 				<input class="search-page__submit" type="submit" name="submit" value=" ">
 			</form>
 			<ul class="social-link-set">
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-facebook"></i></a>
-				</li>
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-twitter"></i></a>
-				</li>
-				<li class="social-link-set__item">
-					<a href=""><i class="icon-google-plus"></i></a>
-				</li>
+				<li class="social-link-set__item"><a href=""><i class="icon-facebook"></i></a></li>
+				<li class="social-link-set__item"><a href=""><i class="icon-twitter"></i></a></li>
+				<li class="social-link-set__item"><a href=""><i class="icon-google-plus"></i></a></li>
 			</ul>
 			<div class="user">
 				<a href=""><i class="icon-user"></i></a>
@@ -145,30 +138,18 @@
 
 <footer class="footer">
 	<ul class="footer-nav">
-		<li class="footer-nav__items"><a href="#">Home</a></li>
-		<li class="footer-nav__items"><a href="#">Form</a></li>
+		<li class="footer-nav__items"><a href="index.html">Home</a></li>
+		<li class="footer-nav__items"><a href="form.html">Form</a></li>
 		<li class="footer-nav__items"><a href="#">Blog </a></li>
 		<li class="footer-nav__items"><a href="#">About </a></li>
 		<li class="footer-nav__items"><a href="#">Contact</a></li>
 	</ul>
-	<ul class="footer-social">
-		<li class="footer-social__items">
-			<a class="footer-social__items--facebook" href=""><i class="icon-facebook"></i></a>
-		</li>
-		<li class="footer-social__items">
-			<a class="footer-social__items--twitter" href=""><i class="icon-twitter"></i></a>
-		</li>
-		<li class="footer-social__items">
-			<a class="footer-social__items--googleplus" href=""><i class="icon-google-plus"></i></a>
-		</li>
-		<li class="footer-social__items">
-			<a class="footer-social__items--linkedin" href=""><i class="icon-linkedin"></i></a>
-		</li>
+	<ul class="footer-social"><li class="footer-social__items"><a class="footer-social__items--facebook" href=""><i class="icon-facebook"></i></a></li>
+		<li class="footer-social__items"><a class="footer-social__items--twitter" href=""><i class="icon-twitter"></i></a></li>
+		<li class="footer-social__items"><a class="footer-social__items--googleplus" href=""><i class="icon-google-plus"></i></a></li>
+		<li class="footer-social__items"><a class="footer-social__items--linkedin" href=""><i class="icon-linkedin"></i></a></li>
 	</ul>
-
 </footer>
-
-
 </div>
 <!--[if lt IE 9]>
 <script src="js/html5shiv/es5-shim.min.js"></script>
@@ -176,8 +157,6 @@
 <script src="js/html5shiv/html5shiv-printshiv.min.js"></script>
 <script src="js/respond/respond.min.js"></script>
 <![endif]-->
-
-
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/main.js"></script>
 </body>
