--- a/html/index.html
+++ b/html/index.html
@@ -3,40 +3,22 @@
 	<div class="communication__navigation">
 		<div class="column-block">
 			<ul class="communication-menu">
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-home"></i>Home</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-cart"></i>Store</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-pencil"></i>Blog</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-users"></i>Community</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-trophy"></i>Contests</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-info"></i>About</a>
-				</li>
-				<li class="communication-menu__item">
-					<a href=""><i class="icon-envelop"></i>Contact</a>
-				</li>
+				<li class="communication-menu__item"><a href="index.html"><i class="icon-home"></i>Home</a></li>
+				<li class="communication-menu__item communication-menu__item--active"><a href="form.html"><i class="icon-cart"></i>Form</a></li>
+				<li class="communication-menu__item"><a href=""><i class="icon-pencil"></i>Blog</a></li>
+				<li class="communication-menu__item"><a href=""><i class="icon-users"></i>Community</a></li>
+				<li class="communication-menu__item"><a href=""><i class="icon-trophy"></i>Contests</a></li>
+				<li class="communication-menu__item"><a href=""><i class="icon-info"></i>About</a></li>
+				<li class="communication-menu__item"><a href=""><i class="icon-envelop"></i>Contact</a></li>
 			</ul>
 			<ul class="contact">
 				<li class="contact__items">
-				<span class="contact__icon">
-					<i class="icon-phone"></i>
-				</span>
+					<span class="contact__icon"><i class="icon-phone"></i></span>
 					<p>(912) 555-1234 <br>
 						(912) 555-5678</p>
 				</li>
 				<li class="contact__items">
-				<span class="contact__icon">
-					<i class="icon-location"></i>
-				</span>
+					<span class="contact__icon"><i class="icon-location"></i></span>
 					<address>
 						1600 Pennsylvania<br>
 						Ave NW, Washington<br>
@@ -44,9 +26,7 @@
 					</address>
 				</li>
 				<li class="contact__items">
-				<span class="contact__icon">
-					<i class="icon-envelop"></i>
-				</span>
+					<span class="contact__icon"><i class="icon-envelop"></i></span>
 					<a href="malito:office@website.com">hello@website.com</a>
 					<a href="malito:office@website.com">office@website.com</a>
 				</li>
@@ -125,18 +105,10 @@
 			<h2 class="sign-in__title">Sign In</h2>
 			<span class="sign-in_descr">Just select your favorite social network to get started</span>
 			<ul class="sign-in__list">
-				<li class="sign-in__items">
-					<a class="sign-in__items--facebook" href=""><i class="icon-facebook"></i></a>
-				</li>
-				<li class="sign-in__items">
-					<a class="sign-in__items--twitter" href=""><i class="icon-twitter"></i></a>
-				</li>
-				<li class="sign-in__items">
-					<a class="sign-in__items--googleplus" href=""><i class="icon-google-plus"></i></a>
-				</li>
-				<li class="sign-in__items">
-					<a class="sign-in__items--linkedin" href=""><i class="icon-linkedin"></i></a>
-				</li>
+				<li class="sign-in__items"><a class="sign-in__items--facebook" href=""><i class="icon-facebook"></i></a></li>
+				<li class="sign-in__items"><a class="sign-in__items--twitter" href=""><i class="icon-twitter"></i></a></li>
+				<li class="sign-in__items"><a class="sign-in__items--googleplus" href=""><i class="icon-google-plus"></i></a></li>
+				<li class="sign-in__items"><a class="sign-in__items--linkedin" href=""><i class="icon-linkedin"></i></a></li>
 			</ul>
 		</div>
 		<div class="subscription">
@@ -163,14 +135,16 @@
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/skewed">
-							<img src="img/portfolio/skewed.jpg" alt="skewed_disign" target="new_blank"></a>
+							<img src="img/portfolio/skewed.jpg" alt="skewed_disign" target="new_blank">
+						</a>
 						<h3 class="tab-content__title">Skewed Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/skewed/">http://dedn.github.io/skewed/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/cosablanca">
-							<img src="img/portfolio/cosablanca.jpg" alt="cosablanca" target="_blank"></a>
+							<img src="img/portfolio/cosablanca.jpg" alt="cosablanca" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Cosablanca</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/cosablanca/">http://dedn.github.io/cosablanca/</a> Link to my repository.
                      Completed layout pages on the site, realized adaptability. Used many examples of animation.</span>
@@ -179,27 +153,31 @@
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/panakeia">
-							<img src="img/portfolio/panakeia.jpg" alt="panakeia" target="_blank"></a>
+							<img src="img/portfolio/panakeia.jpg" alt="panakeia" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Panakeia</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/panakeia/">http://dedn.github.io/panakeia/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/strict">
-							<img src="img/portfolio/strict.jpg" alt="strict" target="_blank"></a>
+							<img src="img/portfolio/strict.jpg" alt="strict" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Strict Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/strict/">http://dedn.github.io/strict/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/project">
-							<img src="img/portfolio/project.jpg" alt="strict" target="_blank"></a>
+							<img src="img/portfolio/project.jpg" alt="strict" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Business Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/project/">http://dedn.github.io/project/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io//bandi/">
-							<img src="img/portfolio/brandi.jpg" alt="strict" target="_blank"></a>
+							<img src="img/portfolio/brandi.jpg" alt="strict" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Brandi</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io//bandi/">http://dedn.github.io//bandi/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
@@ -210,7 +188,8 @@
 				<div class="content-wrapper">
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/portfolio">
-							<img src="img/portfolio/portfolio.jpg" alt="portfolio" target="_blank"></a>
+							<img src="img/portfolio/portfolio.jpg" alt="portfolio" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Portfolio</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/portfolio/">http://dedn.github.io/portfolio/</a>
@@ -218,7 +197,8 @@
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://progsk.ru/">
-							<img src="img/portfolio/gsk.jpg" alt="GSK" target="_blank"></a>
+							<img src="img/portfolio/gsk.jpg" alt="GSK" target="_blank">
+						</a>
 						<h3 class="tab-content__title">GSK</h3>
 						<span class="tab-content__descr"><a href="http://progsk.ru/">http://progsk.ru/</a>
 							Link to site. Completed layout pages on the site, realized adaptability</span>
@@ -226,28 +206,32 @@
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/cloud">
-							<img src="img/portfolio/cloud.jpg" alt="cloud" target="_blank"></a>
+							<img src="img/portfolio/cloud.jpg" alt="cloud" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Cloud Shoes</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/cloud/">http://dedn.github.io/cloud/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/morbi">
-							<img src="img/portfolio/morbi.jpg" alt="morbi" target="_blank"></a>
+							<img src="img/portfolio/morbi.jpg" alt="morbi" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Morbi</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/morbi/">http://dedn.github.io/morbi/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/morbi">
-							<img src="img/portfolio/mache.jpg" alt="mache" target="_blank"></a>
+							<img src="img/portfolio/mache.jpg" alt="mache" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Mache</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/mache/">http://dedn.github.io/mache/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/business">
-							<img src="img/portfolio/busines.jpg" alt="business" target="_blank"></a>
+							<img src="img/portfolio/busines.jpg" alt="business" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Business</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/business/">http://dedn.github.io/business/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
@@ -259,14 +243,16 @@
 				<div class="content-wrapper">
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/dark">
-							<img src="img/portfolio/dark.jpg" alt="dark_games" target="_blank"></a>
+							<img src="img/portfolio/dark.jpg" alt="dark_games" target="_blank">
+						</a>
 						<h3 class="tab-content__title">DarkGames</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/dark/">http://dedn.github.io/dark/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/toronto">
-							<img src="img/portfolio/toronto.jpg" alt="toronto" target="_blank"></a>
+							<img src="img/portfolio/toronto.jpg" alt="toronto" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Toronto</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/toronto/">http://dedn.github.io/toronto/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
@@ -274,28 +260,32 @@
 
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/natgeo">
-							<img src="img/portfolio/national.jpg" alt="national" target="_blank"></a>
+							<img src="img/portfolio/national.jpg" alt="national" target="_blank">
+						</a>
 						<h3 class="tab-content__title">NatGeo</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/natgeo/">http://dedn.github.io/natgeo/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/skokov/blog-active">
-							<img src="img/portfolio/skokov.jpg" alt="skokov" target="_blank"></a>
+							<img src="img/portfolio/skokov.jpg" alt="skokov" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Skokov</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/skokov/blog-active"> http://dedn.github.io/skokov/blog-active</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/quora">
-							<img src="img/portfolio/quora.jpg" alt="skokov" target="_blank"></a>
+							<img src="img/portfolio/quora.jpg" alt="skokov" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Quora</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/quora"> http://dedn.github.io/quora</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/singular">
-							<img src="img/portfolio/singular.jpg" alt="singular" target="_blank"></a>
+							<img src="img/portfolio/singular.jpg" alt="singular" target="_blank">
+						</a>
 						<h3 class="tab-content__title">Singular</h3>
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/singular"> http://dedn.github.io/singular</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
@@ -308,7 +298,8 @@
 		<article class="mev-company">
 			<header class="mev-company__logo">
 				<h2 class="visually-hidden">DEVELOPING CUSTOM SOFTWARE PRODUCTS</h2>
-				<a href="http://mev.com/"><img src="img/mev-logo-sml.png" alt="mev_company"></a>
+				<a href="http://mev.com/"><img src="img/mev-logo-sml.png" alt="mev_company">
+				</a>
 			</header>
 			<blockquote class="mev-company__quote" cite="http://mev.com/about-us/">
 				"Since we started in 2006, we’ve built digital products and services that people use. We’ve helped Fortune 1000
@@ -366,11 +357,11 @@
 		<article class="combo-box">
 			<h2 class="combo-box__title">Combo-Box</h2>
 			<ul class="colors">
-				<li data-color="#2ecc71"></li>
-				<li data-color="#D64A4B"></li>
-				<li data-color="#8e44ad"></li>
+				<li data-color="#cce6be"></li>
+				<li data-color="#e6bebe"></li>
+				<li data-color="#e2e6be"></li>
 				<li class="active-color" data-color="#465e78"></li>
-				<li data-color="#bdc3c7"></li>
+				<li data-color="#c2bee6"></li>
 			</ul>
 		</article>
 	</aside>
