added test page hotel.html improve code style

--- a/app/hotel.html
+++ b/app/hotel.html
@@ -49,3 +49,99 @@
 	</header>
 
 
+
+<section class="hotel">
+    <h2 class="hotel__title">City Hotels</h2>
+     <span class="hotel__descr"> more 1244 hotels</span>
+  <form action="" class="hotel-form">
+    <ul class="hotel-form__list">
+      <li class="hotel-form__items hotel-form--date ">
+        <input type="date" name="date">
+        <input type="date" name="date">
+       </li>
+      <li class="hotel-form__items hotel-form--number ">
+        <input type="number" name="number">
+        <input type="number" name="number">
+      </li>
+      <li class="hotel-form__items">
+        <button class="hotel-form--btn" type="submit">search hotel</button>
+      </li>
+    </ul>
+  </form>
+</section>
+
+
+
+<footer class="footer">
+
+
+	<ul class="footer-nav">
+
+
+		<li class="footer-nav__items"><a href="index.html">Home</a></li>
+
+
+		<li class="footer-nav__items"><a href="form.html">Form</a></li>
+
+
+		<li class="footer-nav__items"><a href="#">Blog </a></li>
+
+
+		<li class="footer-nav__items"><a href="#">About </a></li>
+
+
+		<li class="footer-nav__items"><a href="#">Contact</a></li>
+
+
+	</ul>
+
+
+	<ul class="footer-social"><li class="footer-social__items"><a class="footer-social__items--facebook" href=""><i class="icon-facebook"></i></a></li>
+
+
+		<li class="footer-social__items"><a class="footer-social__items--twitter" href=""><i class="icon-twitter"></i></a></li>
+
+
+		<li class="footer-social__items"><a class="footer-social__items--googleplus" href=""><i class="icon-google-plus"></i></a></li>
+
+
+		<li class="footer-social__items"><a class="footer-social__items--linkedin" href=""><i class="icon-linkedin"></i></a></li>
+
+
+	</ul>
+
+
+</footer>
+
+
+</div>
+
+
+<!--[if lt IE 9]>
+
+
+<script src="js/html5shiv/es5-shim.min.js"></script>
+
+
+<script src="js/html5shiv/html5shiv.min.js"></script>
+
+
+<script src="js/html5shiv/html5shiv-printshiv.min.js"></script>
+
+
+<script src="js/respond/respond.min.js"></script>
+
+
+<![endif]-->
+
+
+<script src="js/jquery-1.12.0.min.js"></script>
+
+
+<script src="js/main.js"></script>
+
+
+</body>
+
+
+</html>
