--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li class="main-nav__items"><a href="index.html">Home</a></li>
 					<li class="main-nav__items"><a href="form.html">Form</a></li>
-					<li class="main-nav__items"><a href="#">Blog </a></li>
+					<li class="main-nav__items"><a href="hotel.html">Hotel</a></li>
 					<li class="main-nav__items"><a href="#">About </a></li>
 					<li class="main-nav__items"><a href="#">Contact</a></li>
 				</ul>
@@ -201,7 +201,6 @@
                      Completed layout pages on the site, realized adaptability. Used many examples of animation.</span>
 					</article>
 
-
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/panakeia">
 							<img src="img/portfolio/panakeia.jpg" alt="panakeia" target="_blank">
@@ -210,6 +209,7 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/panakeia/">http://dedn.github.io/panakeia/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/strict">
 							<img src="img/portfolio/strict.jpg" alt="strict" target="_blank">
@@ -217,6 +217,7 @@
 						<h3 class="tab-content__title">Strict Design</h3>
 						<span class="tab-content__descr"><a href="http://dedn.github.io/strict/">http://dedn.github.io/strict/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/project">
 							<img src="img/portfolio/project.jpg" alt="strict" target="_blank">
@@ -246,6 +247,7 @@
 							href="http://dedn.github.io/portfolio/">http://dedn.github.io/portfolio/</a>
 							Link to site. Completed layout pages on the site, realized adaptability. integrated on WordPress</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://progsk.ru/">
 							<img src="img/portfolio/gsk.jpg" alt="GSK" target="_blank">
@@ -300,6 +302,7 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/dark/">http://dedn.github.io/dark/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/toronto">
 							<img src="img/portfolio/toronto.jpg" alt="toronto" target="_blank">
@@ -317,6 +320,7 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/natgeo/">http://dedn.github.io/natgeo/</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/skokov/blog-active">
 							<img src="img/portfolio/skokov.jpg" alt="skokov" target="_blank">
@@ -325,6 +329,7 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/skokov/blog-active"> http://dedn.github.io/skokov/blog-active</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/quora">
 							<img src="img/portfolio/quora.jpg" alt="skokov" target="_blank">
@@ -333,6 +338,7 @@
 						<span class="tab-content__descr"><a
 							href="http://dedn.github.io/quora"> http://dedn.github.io/quora</a> Link to my repository. Completed layout pages on the site, realized adaptability.</span>
 					</article>
+
 					<article class="tab-content__item clearfix">
 						<a class="tab-content__img-wrap " href="http://dedn.github.io/singular">
 							<img src="img/portfolio/singular.jpg" alt="singular" target="_blank">
