--- a/app/form.html
+++ b/app/form.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li class="main-nav__items"><a href="index.html">Home</a></li>
 					<li class="main-nav__items"><a href="form.html">Form</a></li>
-					<li class="main-nav__items"><a href="#">Blog </a></li>
+					<li class="main-nav__items"><a href="hotel.html">Hotel</a></li>
 					<li class="main-nav__items"><a href="#">About </a></li>
 					<li class="main-nav__items"><a href="#">Contact</a></li>
 				</ul>
